# voltron-evaluation

./: README.md  pyproject.toml
docs/: ROADMAP.md
examples/: README.md  evaluate_grasp.py  evaluate_refer.py
voltron_evaluation/: __init__.py
voltron_evaluation/grasping/: __init__.py  adapter.py  harness.py  preprocessing.py
voltron_evaluation/langref/: __init__.py  adapter.py  harness.py  preprocessing.py
